crates/fetch_options/src/snapshots/fetch_options__connection_keep_alive__tests__connection_keep_alive_active_and_idle_connections-2.snap
---
source: crates/fetch_options/src/connection_keep_alive.rs
expression: "ConnectionKeepAlive::active_and_idle_connections(None, None)"
---
ActiveAndIdleConnections {
    interval: 20s,
    timeout: 20s,
}
