crates/fetch_options/src/snapshots/fetch_options__connection_keep_alive__tests__connection_keep_alive_active_and_idle_connections-3.snap
---
source: crates/fetch_options/src/connection_keep_alive.rs
expression: "ConnectionKeepAlive::active_and_idle_connections(Some(Duration::from_secs(5)),\nSome(Duration::from_secs(5)))"
---
ActiveAndIdleConnections {
    interval: 5s,
    timeout: 5s,
}
