crates/fetch_options/src/snapshots/fetch_options__connection_keep_alive__tests__connection_keep_alive_active_connections.snap
---
source: crates/fetch_options/src/connection_keep_alive.rs
expression: "ConnectionKeepAlive::active_connections(Duration::from_secs(10),\nDuration::from_secs(15))"
---
ActiveConnections {
    interval: 10s,
    timeout: 15s,
}
