crates/fetch_options/src/snapshots/fetch_options__connection_keep_alive__tests__connection_keep_alive_default.snap
---
source: crates/fetch_options/src/connection_keep_alive.rs
expression: "ConnectionKeepAlive::default()"
---
Disabled
